--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==4.3.1
 django-tinymce==3.6.1
 djangorestframework==3.14.0
 et-xmlfile==1.1.0
+gunicorn==21.2.0
 marshmallow==3.20.1
 mypy-extensions==1.0.0
 openpyxl==3.1.2
