--- a/Re-Flex-3D/package.json
+++ b/Re-Flex-3D/package.json
@@ -20,6 +20,7 @@
     "@react-three/fiber": "^8.15.12",
     "@react-three/postprocessing": "^2.15.11",
     "@types/three": "^0.159.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-reflex": "^4.1.0",
