--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,17 @@
 asgiref==3.7.2
+boto3==1.34.17
+botocore==1.34.17
 dataclasses-json==0.6.3
 Deprecated==1.2.14
 dj-database-url==2.1.0
 Django==5.0
 django-cors-headers==4.3.1
+django-storages==1.14.2
 django-tinymce==3.6.1
 djangorestframework==3.14.0
 et-xmlfile==1.1.0
 gunicorn==21.2.0
+jmespath==1.0.1
 marshmallow==3.20.1
 mypy-extensions==1.0.0
 openpyxl==3.1.2
@@ -15,12 +19,16 @@ packaging==23.2
 psycopg==3.1.17
 psycopg2==2.9.9
 pygltflib==1.16.1
+python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
 pytz==2023.3.post1
+s3transfer==0.10.0
+six==1.16.0
 sqlparse==0.4.4
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
+urllib3==2.0.7
 whitenoise==6.6.0
 wrapt==1.16.0
