--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,13 @@
+annotated-types==0.6.0
+anyio==4.2.0
 asgiref==3.7.2
 boto3==1.34.17
 botocore==1.34.17
+certifi==2023.11.17
+colorama==0.4.6
 dataclasses-json==0.6.3
 Deprecated==1.2.14
+distro==1.9.0
 dj-database-url==2.1.0
 Django==5.0
 django-cors-headers==4.3.1
@@ -10,14 +15,22 @@ django-storages==1.14.2
 django-tinymce==3.6.1
 djangorestframework==3.14.0
 et-xmlfile==1.1.0
+exceptiongroup==1.2.0
 gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
+idna==3.6
 jmespath==1.0.1
 marshmallow==3.20.1
 mypy-extensions==1.0.0
+openai==1.7.2
 openpyxl==3.1.2
 packaging==23.2
 psycopg==3.1.17
 psycopg2==2.9.9
+pydantic==2.5.3
+pydantic_core==2.14.6
 pygltflib==1.16.1
 python-dateutil==2.8.2
 python-decouple==3.8
@@ -25,7 +38,9 @@ python-dotenv==1.0.0
 pytz==2023.3.post1
 s3transfer==0.10.0
 six==1.16.0
+sniffio==1.3.0
 sqlparse==0.4.4
+tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
