--- a/Re-Flex-3D/package.json
+++ b/Re-Flex-3D/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-reflex": "^4.1.0",
+    "react-spinners": "^0.13.8",
     "three": "^0.159.0"
   },
   "devDependencies": {
