--- a/Re-Flex-3D/package.json
+++ b/Re-Flex-3D/package.json
@@ -21,6 +21,7 @@
     "@react-three/postprocessing": "^2.15.11",
     "@types/three": "^0.159.0",
     "dotenv": "^16.3.1",
+    "gsap": "^3.12.4",
     "openai": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
